--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.10",
+    "eslint": "^4.18.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-vue": "^4.3.0",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
     "node-sass": "^4.7.2",
