Auto stash before merge of "master" and "origin/master"

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "cd config && webpack-dev-server --quiet --hot --open",
+    "dev": "cd config && webpack-dev-server --quiet --hot --open --history-api-fallback",
     "build": "cd config && webpack-cli",
     "build-prod": "cd config && webpack-cli --env.prod",
     "build-analyze": "cd config && webpack-cli --env.prod --env.analyze",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.10",
     "eslint": "^4.18.1",
