--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-history-api-fallback": "^2.2.1",
     "md5": "^2.2.1",
     "mongodb": "^3.0.3",
     "mongoose": "^5.0.7",
